syntax = "proto3";

package io.github.aaronai.proto;

message SayHelloRequest {
  string request_content = 1;
}

message SayHelloResponse {
  string response_content = 1;
}

service sayHello{
  rpc Unary(SayHelloRequest) returns (SayHelloResponse) {}

  rpc BidirectionalStream(stream SayHelloRequest) returns (stream SayHelloResponse) {}
}